# streamlit-auth-demo

./: .pre-commit-config.yaml  Makefile  README.md  credentials.yaml  pyproject.toml  requirements.txt
demo/: Welcome.py  app.py
demo/pages/: Foo.py
